@@ -77,7 +77,7 @@ abstract class Peak_Application_Modules
      */
     public function run($default_ctrl = 'index')
     {      	
-        //add module name to the end Peak_Router $base_uri
+        //add module name to the end Peak_Router $base_uri      
         Peak_Registry::o()->router->base_uri = Peak_Registry::o()->router->base_uri.$this->_module_name;   
 
         //re-call Peak_Application run() for handling the new routing
